tests/ui/type-alias-impl-trait/generic_duplicate_param_use5.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/generic_duplicate_param_use5.rs:15:5
   |
LL |     (u, t)
   |     ^^^^^^ expected `(T, U)`, got `(U, T)`
   |
note: previous use here
  --> $DIR/generic_duplicate_param_use5.rs:11:5
   |
LL |     (t, u)
   |     ^^^^^^

error: aborting due to 1 previous error

